Fix: sidebar not coming on mobile devices

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -164,11 +164,6 @@
   font-weight: 600;
 }
 
-.navbar {
-  -webkit-backdrop-filter: blur(8px);
-  backdrop-filter: blur(8px);
-}
-
 .docusaurus-mermaid-container svg {
   display: block;
   margin: 0 auto;
@@ -279,4 +274,11 @@ html[data-theme="dark"] .ai-modal .prompt-answer pre {
   height: 15px;
   background-color: var(--ifm-color-primary);
   border-radius: 1px;
+}
+
+@media (min-width: 1000px) {
+  .navbar {
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
+  }
 }
